# BillyBot-Transfer

./: .gitignore  PROBLEMS_AND_SOLUTIONS.md  display_ip.py  pico_micro_ros_example.c  robot_web_controller.py
arduino_ultrasonic/: arduino_ultrasonic.ino
billybot_bringup/: package.xml  setup.cfg  setup.py
billybot_bringup/billybot_bringup/: open_loop_odom.py  safety_node.py  ultrasonic_bridge.py
billybot_bringup/config/: ekf_config.yaml  slam_config.yaml
billybot_bringup/launch/: full_robot.launch.py  slam.launch.py
scripts/: setup_billybot.sh
