<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>billybot_bringup</name>
  <version>0.0.0</version>
  <description>BillyBot bringup — launch files, config, and Python nodes</description>
  <maintainer email="billybot@todo.todo">billybot</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS 2 build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Launch dependencies -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <!-- Python packages (installed via pip/apt) -->
  <!-- pyserial: sudo apt install python3-serial -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
